# search_engine

./: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigUtils.cpp  ConfigUtils.h  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  RelativeIndex.h  SearchServer.cpp  SearchServer.h  answers.json  config.json  main.cpp  requests.json
config/: answers.json  config.json
include/: ConfigManager.h  ConfigUtils.h  ConverterJSON.h  Entry.h  InvertedIndex.h  SearchServer.h  ThreadPool.h
resources/: text_1.txt  text_2.txt  text_3.txt
src/: ConfigManager.cpp  ConfigUtils.cpp  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  IntegrationTest.cpp  TestConfigManager.cpp  TestConverterJSON.cpp  TestEntryAndRelativeIndex.cpp  TestUtils.cpp
tests/config/: bad_config.json  config_with_max.json  config_without_max.json  test_config_limit.json
tests/resources/: doc1.txt
tests/src/: IntegrationTest.cpp  TestConfigManager.cpp  TestConverterJSON.cpp  TestEntryAndRelativeIndex.cpp  TestInvertedIndex.cpp  TestSearchServer.cpp
tests/test_data/: bad_config.json  config_with_max.json  config_without_max.json  doc2.txt  test_config.json  test_requests.json
